force-app/main/default/objects/Apttus_Config2__TempRelateData__c/Apttus_Config2__TempRelateData__c.object-meta.xml
<CustomObject>
    <description>Temporary object for capturing the user selected asset line items which will be converted to related line items.</description>
    <label>Temp Relate Data</label>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Relate Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Relate Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>