force-app/main/default/objects/Apttus_Config2__TempRelateData__c/fields/Apttus_Config2__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
    <label>Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Temp Relate Data</relationshipLabel>
    <relationshipName>TempRelateData</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>