force-app/main/default/objects/Apttus_Config2__TempRelateData__c/fields/Apttus_Config2__ParentBundleNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentBundleNumber__c</fullName>
    <description>Represents the parent bundle number associated with the child bundle</description>
    <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
    <label>Parent Bundle Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>