force-app/main/default/objects/Apttus_Config2__TempRelateData__c/fields/Apttus_Config2__PrimaryLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PrimaryLineNumber__c</fullName>
    <description>Represents the unique number for each temp relate data</description>
    <inlineHelpText>Represents the unique number for each temp relate data</inlineHelpText>
    <label>Primary Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>